--- a/proyectos.html
+++ b/proyectos.html
@@ -47,59 +47,17 @@
                 <p>Algunas de las soluciones innovadoras que hemos desarrollado para nuestros clientes</p>
             </div>
             <div class="projects-grid">
-                <div class="project-card">
+                <div class="project-card" data-url="https://fbp-systems.netlify.app/proyecto1">
                     <div class="project-image">
                         <img src="https://images.unsplash.com/photo-1555066931-4365d14bab8c?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=80" alt="Plataforma Financiera Inteligente">
                     </div>
                     <div class="project-content">
-                        <h3>Plataforma Financiera Inteligente</h3>
-                        <p>Sistema integral de gestión financiera con algoritmos predictivos para optimizar inversiones y reducir riesgos.</p>
+                        <h3>FbP AntiVirus</h3>
+                        <p>Sistema de seguridad para tu PC.</p>
                         <div class="project-tags">
-                            <span class="project-tag">AI</span>
-                            <span class="project-tag">Blockchain</span>
-                            <span class="project-tag">Big Data</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="project-card">
-                    <div class="project-image">
-                        <img src="https://images.unsplash.com/photo-1533750349088-cd871a92f312?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=80" alt="Sistema de Salud Digital">
-                    </div>
-                    <div class="project-content">
-                        <h3>Sistema de Salud Digital</h3>
-                        <p>Plataforma de telemedicina con historial médico seguro, citas virtuales y monitoreo remoto de pacientes.</p>
-                        <div class="project-tags">
-                            <span class="project-tag">IoT</span>
-                            <span class="project-tag">Seguridad</span>
-                            <span class="project-tag">Cloud</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="project-card">
-                    <div class="project-image">
-                        <img src="https://images.unsplash.com/photo-1460925895917-afdab827c52f?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=80" alt="Retail Analytics Suite">
-                    </div>
-                    <div class="project-content">
-                        <h3>Retail Analytics Suite</h3>
-                        <p>Solución de análisis predictivo para comercios que optimiza inventarios y personaliza experiencias de compra.</p>
-                        <div class="project-tags">
-                            <span class="project-tag">Machine Learning</span>
-                            <span class="project-tag">Analytics</span>
-                            <span class="project-tag">API</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="project-card">
-                    <div class="project-image">
-                        <img src="https://images.unsplash.com/photo-1551650975-87deedd944c3?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=80" alt="Smart City Platform">
-                    </div>
-                    <div class="project-content">
-                        <h3>Smart City Platform</h3>
-                        <p>Plataforma IoT para gestión urbana que monitorea tráfico, consumo energético y servicios públicos en tiempo real.</p>
-                        <div class="project-tags">
-                            <span class="project-tag">IoT</span>
-                            <span class="project-tag">Big Data</span>
-                            <span class="project-tag">Cloud</span>
+                            <span class="project-tag">Python</span>
+                            <span class="project-tag">PyQt5</span>
+                            <span class="project-tag">Css</span>
                         </div>
                     </div>
                 </div>
@@ -154,4 +112,5 @@
 
     <script src="js/script.js"></script>
 </body>
+
 </html>
