--- a/proyectos.html
+++ b/proyectos.html
@@ -47,7 +47,7 @@
                 <p>Algunas de las soluciones innovadoras que hemos desarrollado para nuestros clientes</p>
             </div>
             <div class="projects-grid">
-                <div class="project-card" data-url="https://fbp-systems.netlify.app/">
+                <div class="project-card" data-url="https://discord.com">
                     <div class="project-image">
                         <img src="https://images.unsplash.com/photo-1555066931-4365d14bab8c?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=80" alt="Plataforma Financiera Inteligente">
                     </div>
