--- a/contacto.html
+++ b/contacto.html
@@ -60,21 +60,14 @@
                             <i class="fas fa-map-marker-alt"></i>
                             <div>
                                 <h4>Ubicación</h4>
-                                <p>Av. Tecnológica 1234, Distrito Innovación</p>
-                            </div>
-                        </div>
-                        <div class="contact-item">
-                            <i class="fas fa-phone-alt"></i>
-                            <div>
-                                <h4>Teléfono</h4>
-                                <p>+34 912 345 678</p>
+                                <p>Argentina</p>
                             </div>
                         </div>
                         <div class="contact-item">
                             <i class="fas fa-envelope"></i>
                             <div>
                                 <h4>Email</h4>
-                                <p>info@fbpsystems.com</p>
+                                <p>fbp.systems@yahoo.com</p>
                             </div>
                         </div>
                         <div class="contact-item">
@@ -89,31 +82,31 @@
                     <div class="social-links">
                         <a href="#"><i class="fab fa-linkedin-in"></i></a>
                         <a href="#"><i class="fab fa-twitter"></i></a>
-                        <a href="#"><i class="fab fa-github"></i></a>
+                        <a href="https://github.com/FabriDevelope/fbp-system/tree/main"><i class="fab fa-github"></i></a>
                         <a href="#"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
                 <div class="contact-form">
-                    <form id="contactForm">
+                    <form action="mailto:fbp.systems@yahoo.com" method="POST" enctype="text/plain">
                         <div class="form-group">
                             <label for="name">Nombre Completo</label>
-                            <input type="text" id="name" class="form-control" required>
+                            <input type="text" name="Nombre Completo" class="form-control" required>
                         </div>
                         <div class="form-group">
                             <label for="email">Correo Electrónico</label>
-                            <input type="email" id="email" class="form-control" required>
+                            <input type="email" name="Correo Electrónico" class="form-control" required>
                         </div>
                         <div class="form-group">
                             <label for="phone">Teléfono</label>
-                            <input type="tel" id="phone" class="form-control">
+                            <input type="tel" name="Teléfono" class="form-control">
                         </div>
                         <div class="form-group">
                             <label for="subject">Asunto</label>
-                            <input type="text" id="subject" class="form-control" required>
+                            <input type="text" name="Asunto" class="form-control" required>
                         </div>
                         <div class="form-group">
                             <label for="message">Mensaje</label>
-                            <textarea id="message" class="form-control" required></textarea>
+                            <textarea name="Mensaje" class="form-control" required></textarea>
                         </div>
                         <button type="submit" class="btn">Enviar Mensaje</button>
                     </form>
@@ -143,19 +136,9 @@
                     </ul>
                 </div>
                 <div class="footer-col">
-                    <h4>Servicios</h4>
-                    <ul class="footer-links">
-                        <li><a href="#"><i class="fas fa-chevron-right"></i> Desarrollo Web</a></li>
-                        <li><a href="#"><i class="fas fa-chevron-right"></i> Aplicaciones Móviles</a></li>
-                        <li><a href="#"><i class="fas fa-chevron-right"></i> Inteligencia Artificial</a></li>
-                        <li><a href="#"><i class="fas fa-chevron-right"></i> Ciberseguridad</a></li>
-                        <li><a href="#"><i class="fas fa-chevron-right"></i> Consultoría IT</a></li>
-                    </ul>
-                </div>
-                <div class="footer-col">
                     <h4>Contacto</h4>
                     <ul class="footer-links">
-                        <li><i class="fas fa-map-marker-alt"></i> Av. Tecnológica 1234</li>
+                        <li><i class="fas fa-map-marker-alt"></i> Argentina</li>
                         <li><i class="fas fa-envelope"></i> fbp.systems@yahoo.com</li>
                         <li><i class="fas fa-clock"></i> L-V: 9:00 - 18:00</li>
                     </ul>
