--- a/index.html
+++ b/index.html
@@ -73,19 +73,9 @@
                     </ul>
                 </div>
                 <div class="footer-col">
-                    <h4>Servicios</h4>
-                    <ul class="footer-links">
-                        <li><a href="#"><i class="fas fa-chevron-right"></i> Desarrollo Web</a></li>
-                        <li><a href="#"><i class="fas fa-chevron-right"></i> Aplicaciones Móviles</a></li>
-                        <li><a href="#"><i class="fas fa-chevron-right"></i> Inteligencia Artificial</a></li>
-                        <li><a href="#"><i class="fas fa-chevron-right"></i> Ciberseguridad</a></li>
-                        <li><a href="#"><i class="fas fa-chevron-right"></i> Consultoría IT</a></li>
-                    </ul>
-                </div>
-                <div class="footer-col">
                     <h4>Contacto</h4>
                     <ul class="footer-links">
-                        <li><i class="fas fa-map-marker-alt"></i> Av. Tecnológica 1234</li>
+                        <li><i class="fas fa-map-marker-alt"></i> Argentina</li>
                         <li><i class="fas fa-envelope"></i> fbp.systems@yahoo.com</li>
                         <li><i class="fas fa-clock"></i> L-V: 9:00 - 18:00</li>
                     </ul>
