--- a/proyectos.html
+++ b/proyectos.html
@@ -47,7 +47,7 @@
                 <p>Algunas de las soluciones innovadoras que hemos desarrollado para nuestros clientes</p>
             </div>
             <div class="projects-grid">
-                <div class="project-card" data-url="https://discord.com">
+                <div class="project-card">
                     <div class="project-image">
                         <img src="https://images.unsplash.com/photo-1555066931-4365d14bab8c?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=80" alt="Plataforma Financiera Inteligente">
                     </div>
@@ -87,19 +87,9 @@
                     </ul>
                 </div>
                 <div class="footer-col">
-                    <h4>Servicios</h4>
-                    <ul class="footer-links">
-                        <li><a href="#"><i class="fas fa-chevron-right"></i> Desarrollo Web</a></li>
-                        <li><a href="#"><i class="fas fa-chevron-right"></i> Aplicaciones Móviles</a></li>
-                        <li><a href="#"><i class="fas fa-chevron-right"></i> Inteligencia Artificial</a></li>
-                        <li><a href="#"><i class="fas fa-chevron-right"></i> Ciberseguridad</a></li>
-                        <li><a href="#"><i class="fas fa-chevron-right"></i> Consultoría IT</a></li>
-                    </ul>
-                </div>
-                <div class="footer-col">
                     <h4>Contacto</h4>
                     <ul class="footer-links">
-                        <li><i class="fas fa-map-marker-alt"></i> Av. Tecnológica 1234</li>
+                        <li><i class="fas fa-map-marker-alt"></i> Argentina</li>
                         <li><i class="fas fa-envelope"></i> fbp.systems@yahoo.com</li>
                         <li><i class="fas fa-clock"></i> L-V: 9:00 - 18:00</li>
                     </ul>
