--- a/sobre-nosotros.html
+++ b/sobre-nosotros.html
@@ -73,7 +73,7 @@
                     </div>
                 </div>
                 <div class="about-image">
-                    <img src="https://images.unsplash.com/photo-1552664730-d307ca884978?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=80" alt="Equipo de FbP Systems trabajando">
+                    <img src="https://i.imgur.com/Ar1xBSC.png" alt="Logo de FbP Systems">
                 </div>
             </div>
         </div>
