--- a/tecnologias.html
+++ b/tecnologias.html
@@ -71,38 +71,17 @@
                 </div>
                 <div class="tech-card">
                     <div class="tech-icon">
-                        <i class="fas fa-cloud"></i>
+                        <i class="fa-brands fa-css"></i>
                     </div>
-                    <h3>Cloud Computing</h3>
-                    <p>Implementación y gestión de soluciones escalables en AWS, Azure y Google Cloud Platform.</p>
+                    <h3>CSS</h3>
+                    <p>Estilos modernos, animados, y profesionales para tu pagina WEB.</p>
                 </div>
-                <div class="tech-card">
+                    <div class="tech-card">
                     <div class="tech-icon">
-                        <i class="fas fa-mobile-alt"></i>
+                        <i class="fa-brands fa-square-js"></i>
                     </div>
-                    <h3>Mobile Apps</h3>
-                    <p>Desarrollo de aplicaciones nativas e híbridas para iOS y Android con excelente experiencia de usuario.</p>
-                </div>
-                <div class="tech-card">
-                    <div class="tech-icon">
-                        <i class="fas fa-database"></i>
-                    </div>
-                    <h3>Big Data</h3>
-                    <p>Procesamiento y análisis de grandes volúmenes de datos para obtener insights valiosos para tu negocio.</p>
-                </div>
-                <div class="tech-card">
-                    <div class="tech-icon">
-                        <i class="fab fa-ethereum"></i>
-                    </div>
-                    <h3>Blockchain</h3>
-                    <p>Desarrollo de aplicaciones descentralizadas, smart contracts y soluciones basadas en blockchain.</p>
-                </div>
-                <div class="tech-card">
-                    <div class="tech-icon">
-                        <i class="fas fa-robot"></i>
-                    </div>
-                    <h3>Inteligencia Artificial</h3>
-                    <p>Machine Learning, Deep Learning y Procesamiento de Lenguaje Natural para soluciones inteligentes.</p>
+                    <h3>JavaScript</h3>
+                    <p>Funciones y Animaciones para WEBs HTML con estilo en CSS.</p>
                 </div>
             </div>
         </div>
