texto en sobre nosotros mejorado

--- a/sobre-nosotros.html
+++ b/sobre-nosotros.html
@@ -52,27 +52,28 @@
             <div class="about-content">
                 <div class="about-text">
                     <h3>De la pasión a la excelencia</h3>
-                    <p>Fundada en 2015, FbP Systems nació de la visión de tres apasionados ingenieros que buscaban revolucionar la industria tecnológica. Comenzamos como un pequeño equipo trabajando desde un garaje, y hoy somos una empresa reconocida con más de 50 profesionales dedicados.</p>
-                    <p>Nuestro viaje ha estado marcado por la innovación constante y el compromiso con la excelencia, llevándonos a colaborar con empresas de diversos sectores a nivel internacional.</p>
+                    <p>Fundada en 2023, FbP Systems nació de la visión de un apasionados que buscaba revolucionar la industria tecnológica.</p>
+                    <p>Hacemos trabajos profesionales, con calidad y excelencia, tal cual como el cliente lo pide.</p>
                     
                     <div class="about-grid">
-                        <div class="about-card">
-                            <h4><i class="fas fa-bullseye"></i>Misión</h4>
-                            <p>Desarrollar soluciones tecnológicas innovadoras que impulsen el crecimiento de nuestros clientes y transformen la manera en que interactúan con el mundo digital.</p>
-                        </div>
-                        <div class="about-card">
-                            <h4><i class="fas fa-eye"></i>Visión</h4>
-                            <p>Ser líderes globales en desarrollo tecnológico, reconocidos por nuestra capacidad para resolver los desafíos más complejos con creatividad y excelencia.</p>
-                        </div>
-                        <div class="about-card">
-                            <h4><i class="fas fa-lightbulb"></i>Innovación</h4>
-                            <p>Buscamos constantemente nuevas formas de abordar problemas, explorando tecnologías emergentes y metodologías creativas.</p>
-                        </div>
-                        <div class="about-card">
-                            <h4><i class="fas fa-users"></i>Colaboración</h4>
-                            <p>Trabajamos en estrecha colaboración con nuestros clientes, entendiendo sus necesidades para ofrecer soluciones a medida.</p>
-                        </div>
-                    </div>
+    <div class="about-card">
+        <h4><i class="fas fa-bullseye"></i>Misión</h4>
+        <p>En FbP Systems, nuestra misión es crear herramientas digitales útiles, bien pensadas y accesibles. Diseñamos cada solución pensando en cómo puede hacerle la vida más fácil a quienes la usan.</p>
+    </div>
+    <div class="about-card">
+        <h4><i class="fas fa-eye"></i>Visión</h4>
+        <p>Aspiramos a convertirnos en una referencia en desarrollo independiente: un equipo pequeño con ideas grandes, capaz de ofrecer productos que combinan tecnología, diseño y sentido común.</p>
+    </div>
+    <div class="about-card">
+        <h4><i class="fas fa-lightbulb"></i>Innovación</h4>
+        <p>Nos gusta experimentar. Probamos, rompemos, aprendemos y mejoramos. La innovación no es un objetivo, es parte de nuestro proceso diario.</p>
+    </div>
+    <div class="about-card">
+        <h4><i class="fas fa-users"></i>Colaboración</h4>
+        <p>FbP Systems nació de la colaboración, y así seguimos creciendo. Nos encanta trabajar junto a personas, equipos y comunidades que comparten la pasión por hacer las cosas bien.</p>
+    </div>
+</div>
+
                 </div>
                 <div class="about-image">
                     <img src="https://i.imgur.com/Ar1xBSC.png" alt="Logo de FbP Systems">
